[gd_scene load_steps=5 format=3 uid="uid://cmx3wn8gwsk4c"]

[ext_resource type="Script" uid="uid://dwhtltods2p31" path="res://scenes/main.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://dspj2e5givjij" path="res://scripts/inspector.gd" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://bf6dgwjm40rmn" path="res://scenes/scene_tree_manager.gd" id="2_sugp2"]
[ext_resource type="Script" uid="uid://dts6pvo1fij1o" path="res://scenes/canvas.gd" id="3_jyhfs"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="SceneTreeManager" type="Tree" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_root = true
script = ExtResource("2_sugp2")

[node name="ExportButton" type="Button" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Export to HTML"

[node name="FileSystemPanel" type="ItemList" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Canvas" type="Panel" parent="HSplitContainer/HSplitContainer"]
clip_contents = true
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_jyhfs")

[node name="World" type="Control" parent="HSplitContainer/HSplitContainer/Canvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InspectorContainer" type="ScrollContainer" parent="HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InspectorVBox" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/InspectorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_0wfyh")

[connection signal="pressed" from="HSplitContainer/VSplitContainer/ExportButton" to="." method="_on_export_button_pressed"]
